force-app/main/default/objects/Account_Relation__c/Account_Relation__c.object-meta.xml
<CustomObject>
    <description>Junction object for having Many to Many Account relationship</description>
    <label>Account Relationships</label>
    <nameField>
        <displayFormat>Rel-{000}</displayFormat>
        <label>Account Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Relationships</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>