force-app/main/default/objects/Account_Relation__c/fields/Corp_TP_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Corp_TP_Job_Title__c</fullName>
    <formula>Corporate_Touch_Point__r.Job_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corp TP Job Title</label>
    <type>Text</type>
</CustomField>