force-app/main/default/objects/Account_Relation__c/fields/Corp_TP_Phone__c.field-meta.xml
<CustomField>
    <fullName>Corp_TP_Phone__c</fullName>
    <formula>Corporate_Touch_Point__r.Phone</formula>
    <label>Corp TP Phone</label>
    <type>Text</type>
</CustomField>