force-app/main/default/objects/Account_Relation__c/fields/Corporate_Touch_Point__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Touch_Point__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corporate Touch Point</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Related_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Relationships (Corporate Touch Point)</relationshipLabel>
    <relationshipName>Corporate_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>