force-app/main/default/objects/Account_Relation__c/fields/End_date_of_TMC_Contract__c.field-meta.xml
<CustomField>
    <fullName>End_date_of_TMC_Contract__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End date of TMC Contract</label>
    <type>Date</type>
</CustomField>