force-app/main/default/objects/Account_Relation__c/fields/Group_Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>Group_Agent_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please use this field to capture the email of the Group TMC&apos;s agent.This email will appear on the proposal/contract</inlineHelpText>
    <label>Group Agent Email</label>
    <type>Email</type>
</CustomField>