force-app/main/default/objects/Account_Relation__c/fields/Group_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Agent_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please use this field to capture the name of the Group TMC&apos;s agent.This name will appear on the proposal/contract</inlineHelpText>
    <label>Group Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>