force-app/main/default/objects/Account_Relation__c/fields/Parent_Sales_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Parent_Sales_Hierarchy__c</fullName>
    <description>To bring in sales hierarchy for reporting purposes</description>
    <formula>Primary_Account__r.Agency_Sales_Hierarchy__c</formula>
    <label>Parent Sales Hierarchy</label>
    <type>Text</type>
</CustomField>