force-app/main/default/objects/Account_Relation__c/fields/Parent_Sales_region__c.field-meta.xml
<CustomField>
    <fullName>Parent_Sales_region__c</fullName>
    <description>To bring in Agency Sales Region for reporting purposes.</description>
    <formula>Primary_Account__r.Agency_Sales_Region__c</formula>
    <label>Parent Sales Region</label>
    <type>Text</type>
</CustomField>