force-app/main/default/objects/Account_Relation__c/fields/Phone_TMC__c.field-meta.xml
<CustomField>
    <fullName>Phone_TMC__c</fullName>
    <formula>TMC_Touchpoint__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone TMC</label>
    <type>Text</type>
</CustomField>