force-app/main/default/objects/Account_Relation__c/fields/Primary_Account__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Relationships</relationshipLabel>
    <relationshipName>Account_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>