force-app/main/default/objects/Account_Relation__c/fields/Primary_Account_f__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account_f__c</fullName>
    <description>Used to display in Related list of account ( remove this if  when Primary_Account__c is available)</description>
    <formula>Primary_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Account Name</label>
    <type>Text</type>
</CustomField>