force-app/main/default/objects/Account_Relation__c/fields/Primary_Registry_Id__c.field-meta.xml
<CustomField>
    <fullName>Primary_Registry_Id__c</fullName>
    <description>External ID for Quest migrated Accounts. Maps to Registry_ID at the account level.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Primary Registry ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>