force-app/main/default/objects/Account_Relation__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Relationships (Reciprocal)</relationshipLabel>
    <relationshipName>Account_Relations1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>