force-app/main/default/objects/Account_Relation__c/fields/Related_Account_f__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_f__c</fullName>
    <formula>Related_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Account Name</label>
    <type>Text</type>
</CustomField>