force-app/main/default/objects/Account_Relation__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consortium Parent Of</fullName>
            </value>
            <value>
                <fullName>Travel Manager Of</fullName>
            </value>
            <value>
                <fullName>Consolidator/Ticketing Agent Of</fullName>
            </value>
            <value>
                <fullName>Group Travel Manager Of</fullName>
            </value>
            <value>
                <fullName>Ticketed by</fullName>
            </value>
            <value>
                <fullName>Export Partner</fullName>
                <label>Export Partner of</label>
            </value>
            <value>
                <fullName>Strategically Important to</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>