force-app/main/default/objects/Account_Relation__c/fields/TMC_Touchpoint__c.field-meta.xml
<CustomField>
    <fullName>TMC_Touchpoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TMC Touch Point</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Touch Points</relationshipLabel>
    <relationshipName>Account_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>