force-app/main/default/objects/Account_Relation__c/validationRules/Corporate_Touch_Point.validationRule-meta.xml
<ValidationRule>
    <fullName>Corporate_Touch_Point</fullName>
    <active>true</active>
    <description>Account Managers often leave the contact field blank causing downstream problems, this will enfore quality of data.</description>
    <errorConditionFormula>AND(ISPICKVAL(Relationship__c , &apos;Travel Manager Of&apos;),
ISBLANK( Corporate_Touch_Point__c),
NOT ($Profile.Name = &apos;System Administrator&apos;),
NOT ($Profile.Name = &apos;Qantas System Administrator&apos;),
NOT ($Profile.Name = &apos;Qantas System Admin - Freight&apos;),
NOT ($Profile.Name = &apos;Qantas System Admin - QCC&apos;),
NOT ($Profile.Name = &apos;Qantas System Admin - SND&apos;),
NOT ($Profile.Name = &apos;Data Administrator&apos;),
OR($Profile.Name = &apos;QL_Qantas_Sales&apos;,$Profile.Name = &apos;Sales and Distribution-Sales&apos;,$Profile.Name = &apos;Sales and Distribution-Distribution&apos;,$Profile.Name = &apos;QL_Sales&apos;))</errorConditionFormula>
    <errorMessage>Contact missing - link a contact to create relationship</errorMessage>
</ValidationRule>