force-app/main/default/objects/Account_Relation__c/validationRules/End_Date_is_Mandatory_when_Inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_is_Mandatory_when_Inactive</fullName>
    <active>true</active>
    <description>When Active flag has been unflagged, End Date is mandatory</description>
    <errorConditionFormula>AND (  
NOT ($Profile.Name = &apos;System Administrator&apos;),
NOT ($Profile.Name = &apos;Qantas System Administrator&apos;),
NOT ($Profile.Name = &apos;Qantas System Admin - Freight&apos;),
NOT ($Profile.Name = &apos;Qantas System Admin - QCC&apos;),
NOT ($Profile.Name = &apos;Qantas System Admin - SND&apos;),
NOT ($Profile.Name = &apos;Data Administrator&apos;), 
Active__c = False,
ISNULL( End_Date__c )
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>Please add the End Date to this Inactive Relationsip</errorMessage>
</ValidationRule>