force-app/main/default/objects/Account_Relation__c/validationRules/Mandate_Group_Agent_Name_and_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandate_Group_Agent_Name_and_Email</fullName>
    <active>true</active>
    <description>Mandate Group Agent Name and Group Agent Email if value of Relationship is &quot;Group Travel Manager of&apos;</description>
    <errorConditionFormula>AND(ISPICKVAL(Relationship__c , &apos;Group Travel Manager Of&apos;),
OR(ISBLANK(Group_Agent_Name__c),
ISBLANK( Group_Agent_Email__c)))</errorConditionFormula>
    <errorMessage>Please enter the value for Group Agent Name and Group Agent Email</errorMessage>
</ValidationRule>