force-app/main/default/objects/Account_Relation__c/validationRules/Ticketed_by_Relationship_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Ticketed_by_Relationship_Check</fullName>
    <active>true</active>
    <description>Restrict the users creating the Ticked by relationship records except the below users. CRM-3934.
1) Kellie Sullivan
2) Nadine FernandesMoniz
3) Mary Elek
4) Allan Aguilar
5) Kevin Burke
6) Gavin Fahey
7) API Integration - CRM 5347</description>
    <errorConditionFormula>AND($Setup.EnableValidationRule__c.VR_Ticketed_by_Relationship_Check__c = FALSE,
ISPICKVAL(Relationship__c , &apos;Ticketed by&apos;)
)</errorConditionFormula>
    <errorMessage>Ticked by Relationship Records Can&apos;t created.</errorMessage>
</ValidationRule>