force-app/main/default/objects/Account_Relation__c/listViews/Corporates_with_FC_relationship.listView-meta.xml
<ListView>
    <fullName>Corporates_with_FC_relationship</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Related_Account__c</columns>
    <columns>Corporate_Touch_Point__c</columns>
    <columns>Primary_Account__c</columns>
    <columns>Parent_Sales_Hierarchy__c</columns>
    <columns>TMC_Touchpoint__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent_Sales_Hierarchy__c</field>
        <operation>startsWith</operation>
        <value>FC -</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Corporates with FC relationship</label>
</ListView>