force-app/main/default/objects/Account_Relation__c/listViews/Enterprise_Organisation_View.listView-meta.xml
<ListView>
    <fullName>Enterprise_Organisation_View</fullName>
    <columns>NAME</columns>
    <columns>Primary_Account_f__c</columns>
    <columns>Relationship__c</columns>
    <columns>Related_Account_f__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Primary_Account_f__c</field>
        <operation>equals</operation>
        <value>Enterprise Organisation</value>
    </filters>
    <label>Enterprise Organisation View</label>
</ListView>